--- a/meta.yaml
+++ b/meta.yaml
@@ -16,6 +16,7 @@ requirements:
   - r-roxygen2==7.3.2
   run:
   - r-base==4.3.3
+  - r-testthat==3.2.1.1
   - r-ggplot2==3.5.1
   - r-foreach==1.5.2
   - r-crayon==1.5.3
@@ -29,6 +30,10 @@ requirements:
   - mafft==7.525
   - parallel==20170422
 
+test:
+  commands:
+    - Rscript $PREFIX/lib/R/library/pannagram/tests/testthat/test.R
+    
 about:
   home: https://www.github.com/iganna/pannagram
   license: MIT
