--- a/pannagram_dev.yaml
+++ b/pannagram_dev.yaml
@@ -14,8 +14,10 @@ dependencies:
   - r-doparallel==1.0.17
   - r-stringi==1.8.4
   - r-usethis==3.0.0
+  - r-kmer
   - bioconductor-rhdf5==2.46.1
   - bioconductor-muscle==3.44.0
   - blast==2.16.0
   - mafft==7.525
   - parallel==20170422
+  
