--- a/pannagram.yaml
+++ b/pannagram.yaml
@@ -7,6 +7,7 @@ dependencies:
   - r-devtools==2.4.5
   - r-testthat==3.2.1.1
   - r-ggplot2==3.5.1
+  - r-reshape2==1.4.4
   - r-roxygen2==7.3.2
   - r-foreach==1.5.2
   - r-crayon==1.5.3
