--- a/pannagram.yaml
+++ b/pannagram.yaml
@@ -123,6 +123,7 @@ dependencies:
   - r-later=1.3.2
   - r-lattice=0.22_6
   - r-lifecycle=1.0.4
+  - r-lobstr=1.1.2
   - r-magrittr=2.0.3
   - r-mass=7.3_60.0.1
   - r-matrix=1.6_5
@@ -144,6 +145,7 @@ dependencies:
   - r-processx=3.8.4
   - r-profvis=0.4.0
   - r-promises=1.3.0
+  - r-pryr=0.1.6
   - r-purrr=1.0.2
   - r-r6=2.5.1
   - r-ragg=1.3.3
