--- a/pannagram_m4.yml
+++ b/pannagram_m4.yml
@@ -1,97 +1,125 @@
 name: pannagram
 channels:
   - bioconda
-  - bioconda/label/cf201901
-  - bioconda/label/gcc7
   - conda-forge
 dependencies:
   - _r-mutex=1.0.1=anacondar_1
-  - bioconductor-biocgenerics=0.28.0=r351_1
-  - bioconductor-biostrings=2.50.2=r351h1de35cc_0
-  - bioconductor-iranges=2.16.0=r351h1de35cc_0
-  - bioconductor-msa=1.14.0=r351h0a44026_0
-  - bioconductor-muscle=3.24.0=r351h0a44026_0
-  - bioconductor-rhdf5=2.26.0=r351h0a44026_1
-  - bioconductor-rhdf5lib=1.4.3=r351h4df48c0_0
-  - bioconductor-s4vectors=0.20.1=r351h470a237_0
-  - bioconductor-xvector=0.22.0=r351h1de35cc_0
-  - bioconductor-zlibbioc=1.28.0=r351h1de35cc_0
-  - blast=2.7.1=h0f9cf5d_6
-  - boost=1.67.0=py36_0
-  - boost-cpp=1.67.0=h3a22d5f_0
+  - argcomplete=3.6.2=pyhd8ed1ab_0
+  - bioconductor-biocgenerics=0.48.1=r43hdfd78af_2
+  - bioconductor-biostrings=2.70.1=r43h4c50009_2
+  - bioconductor-data-packages=20250401=hdfd78af_0
+  - bioconductor-genomeinfodb=1.38.1=r43hdfd78af_1
+  - bioconductor-genomeinfodbdata=1.2.11=r43hdfd78af_1
+  - bioconductor-ggtree=3.10.0=r43hdfd78af_0
+  - bioconductor-iranges=2.36.0=r43h4c50009_2
+  - bioconductor-msa=1.34.0=r43hb890f52_1
+  - bioconductor-muscle=3.44.0=r43hc0ef7c4_0
+  - bioconductor-rhdf5=2.46.1=r43hc0ef7c4_1
+  - bioconductor-rhdf5filters=1.14.1=r43hc0ef7c4_1
+  - bioconductor-rhdf5lib=1.24.0=r43h4c50009_2
+  - bioconductor-s4vectors=0.40.2=r43h4c50009_2
+  - bioconductor-treeio=1.26.0=r43hdfd78af_1
+  - bioconductor-xvector=0.42.0=r43h4c50009_2
+  - bioconductor-zlibbioc=1.48.0=r43h4c50009_2
+  - blast=2.16.0=h53185c9_5
   - bwidget=1.10.1=h694c41f_0
   - bzip2=1.0.8=hfdf4475_7
+  - c-ares=1.34.5=hf13058a_0
   - ca-certificates=2025.1.31=h8857fd0_0
-  - cairo=1.16.0=h0ab9d94_1001
-  - cctools_osx-64=973.0.1=h3e07e27_2
-  - clang=12.0.1=h694c41f_4
-  - clang-12=12.0.1=default_he082bbe_4
-  - clang_osx-64=12.0.1=h633439f_9
-  - clangxx=12.0.1=default_he082bbe_4
-  - clangxx_osx-64=12.0.1=hdb584c0_9
-  - compiler-rt=12.0.1=he01351e_0
-  - compiler-rt_osx-64=12.0.1=hd3f61c9_0
-  - curl=7.64.0=heae2a1f_0
-  - fontconfig=2.13.1=h1027ab8_1000
-  - freetype=2.12.1=h60636b9_2
-  - gawk=5.0.1=h6a5b60f_0
-  - gettext=0.23.1=hd385c8e_0
-  - gettext-tools=0.23.1=h27064b9_0
-  - gfortran_osx-64=4.8.5=h22b1bf0_8
-  - glib=2.66.3=h519c658_0
-  - gmp=6.1.2=h0a44026_1000
+  - cairo=1.18.4=h950ec3b_0
+  - cctools_osx-64=1010.6=hfe8da7e_6
+  - clang=20.1.2=default_h576c50e_0
+  - clang-20=20.1.2=default_h3571c67_0
+  - clang_impl_osx-64=20.1.2=h5bbe921_24
+  - clang_osx-64=20.1.2=h7e5c614_24
+  - clangxx=20.1.2=default_heb2e8d1_0
+  - clangxx_impl_osx-64=20.1.2=hff9d845_24
+  - clangxx_osx-64=20.1.2=h7e5c614_24
+  - compiler-rt=20.1.2=h52031e2_0
+  - compiler-rt_osx-64=20.1.2=hc6f8467_0
+  - curl=8.13.0=h5dec5d8_0
+  - entrez-direct=22.4=h193322a_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h37eeddb_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.13.3=h40dfd5c_0
+  - fribidi=1.0.10=hbcb3906_0
+  - gawk=5.3.1=h0631170_0
+  - gfortran_impl_osx-64=13.3.0=hbf5bf67_105
+  - gfortran_osx-64=13.3.0=h3223c34_1
+  - gmp=6.3.0=hf036a51_2
   - graphite2=1.3.13=h73e2aa4_1003
-  - harfbuzz=2.4.0=h92b87b8_1
-  - icu=58.2=h0a44026_1000
-  - jpeg=9e=hb7f2c08_3
-  - krb5=1.16.3=h24a3359_1000
-  - ld64_osx-64=609=h2487922_2
-  - ldid=2.1.2=h6a69015_3
+  - gsl=2.7=h93259b0_0
+  - harfbuzz=11.0.1=h97d4977_0
+  - icu=75.1=h120a0e1_0
+  - isl=0.26=imath32_h2e86a7b_101
+  - jq=1.5=0
+  - krb5=1.21.3=h37d8d59_0
+  - ld64_osx-64=951.9=hc68d7ca_6
   - lerc=4.0.0=hb486fe8_0
   - libasprintf=0.23.1=h27064b9_0
-  - libasprintf-devel=0.23.1=h27064b9_0
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libclang-cpp12=12.0.1=default_he082bbe_4
-  - libcurl=7.64.0=h76de61e_0
-  - libcxx=20.1.1=hf95d169_0
-  - libdeflate=1.14=hb7f2c08_0
+  - libblas=3.9.0=31_h7f60823_openblas
+  - libcblas=3.9.0=31_hff6cab4_openblas
+  - libclang-cpp20.1=20.1.2=default_h3571c67_0
+  - libcurl=8.13.0=h5dec5d8_0
+  - libcxx=20.1.2=hf95d169_0
+  - libcxx-devel=20.1.2=h7c275be_0
+  - libdeflate=1.23=he65b83e_0
   - libedit=3.1.20250104=pl5321ha958ccf_0
-  - libffi=3.2.1=1
-  - libgcc=4.8.5=hdbeacc1_10
+  - libev=4.33=h10d778d_2
+  - libexpat=2.7.0=h240833e_0
+  - libffi=3.4.6=h281671d_1
+  - libgcc=4.8.5=1
   - libgettextpo=0.23.1=h27064b9_0
-  - libgettextpo-devel=0.23.1=h27064b9_0
-  - libgfortran=3.0.1=0
-  - libglib=2.66.3=h2575888_0
+  - libgfortran=14.2.0=hef36b68_105
+  - libgfortran-devel_osx-64=13.3.0=h297be85_105
+  - libgfortran5=14.2.0=h58528f3_105
+  - libgit2=1.8.4=hf50decd_1
+  - libglib=2.84.0=h5c976ab_0
   - libiconv=1.18=h4b5e92a_1
+  - libidn2=2.3.8=he8ff88c_0
   - libintl=0.23.1=h27064b9_0
-  - libintl-devel=0.23.1=h27064b9_0
-  - liblapack=3.8.0=14_openblas
-  - libllvm12=12.0.1=hd011deb_2
-  - liblzma=5.6.4=hd471939_0
-  - liblzma-devel=5.6.4=hd471939_0
-  - libopenblas=0.3.7=hd44dcd8_1
-  - libpng=1.6.43=h92b6c6a_0
-  - libssh2=1.8.0=hf30b1f0_1003
-  - libtiff=4.4.0=h6268bbc_5
+  - libjpeg-turbo=3.0.0=h0dc2134_1
+  - liblapack=3.9.0=31_h236ab99_openblas
+  - libllvm20=20.1.2=hc29ff6c_0
+  - liblzma=5.8.1=hd471939_0
+  - libmpdec=4.0.0=hfdf4475_0
+  - libnghttp2=1.64.0=hc7306c3_0
+  - libopenblas=0.3.29=openmp_hbf64a52_0
+  - libpng=1.6.47=h3c4a55f_0
+  - libsqlite=3.49.1=hdb6dae5_2
+  - libssh2=1.11.1=h3dc7d44_0
+  - libtiff=4.7.0=hb77a491_3
+  - libunistring=0.9.10=h1de35cc_0
+  - libuv=1.50.0=h4cb831e_0
   - libwebp-base=1.5.0=h6cf52b4_0
-  - libxml2=2.9.9=hd80cff7_2
-  - libzlib=1.2.13=h87427d6_6
-  - llvm-openmp=20.1.1=ha54dae1_1
-  - llvm-tools=12.0.1=hd011deb_2
+  - libxml2=2.13.7=h93c44a6_1
+  - libzlib=1.3.1=hd23fc13_2
+  - llvm-openmp=20.1.2=ha54dae1_0
+  - llvm-tools=20.1.2=h3fe3016_0
+  - llvm-tools-20=20.1.2=he90a8e3_0
   - mafft=7.525=h2413b67_1
   - make=4.4.1=h00291cd_2
+  - mpc=1.3.1=h9d8efa1_1
+  - mpfr=4.2.1=haed47dc_3
+  - ncbi-vdb=3.2.1=h5fa12a8_0
   - ncurses=6.5=h0622a9a_3
-  - nettle=3.3=0
-  - numpy=1.19.5=py36h08b5fde_2
-  - openssl=1.0.2u=h0b31af3_0
-  - pango=1.40.14=h0da9b22_1005
+  - nlopt=2.9.0=py313h026c49f_0
+  - numpy=2.2.4=py313hc518a0f_0
+  - openssl=3.5.0=hc426f3f_0
+  - pandoc=3.6.4=h694c41f_0
+  - pango=1.56.3=hae8941d_1
   - parallel=20170422=pl5.22.0_0
-  - pcre=8.45=he49afe7_0
+  - pcre2=10.44=h7634a1b_2
   - perl=5.22.0.1=0
   - perl-app-cpanminus=1.7043=pl5.22.0_0
   - perl-archive-tar=2.18=pl5.22.0_2
   - perl-carp=1.38=pl5.22.0_0
+  - perl-common-sense=3.74=0
   - perl-compress-raw-bzip2=2.069=1
   - perl-compress-raw-zlib=2.069=3
   - perl-exporter=5.72=pl5.22.0_0
@@ -99,123 +127,234 @@ dependencies:
   - perl-extutils-makemaker=6.66=pl5.22.0_2
   - perl-io-compress=2.069=pl5.22.0_2
   - perl-io-zlib=1.10=1
+  - perl-json=2.90=1
+  - perl-json-xs=2.34=0
   - perl-list-moreutils=0.428=pl5.22.0_0
   - perl-pathtools=3.73=pl522_1
   - perl-scalar-list-utils=1.45=2
   - perl-test-more=1.001002=pl5.22.0_0
   - perl-threaded=5.32.1=hdfd78af_1
-  - pip=21.3.1=pyhd8ed1ab_0
-  - pixman=0.38.0=h01d97ff_1003
-  - python=3.6.7=h4a56312_1002
-  - python_abi=3.6=2_cp36m
-  - r-ape=5.3=r35hf99fc2c_1
-  - r-assertthat=0.2.1=r35h6115d3f_1
-  - r-backports=1.1.6=r35h17f1fa6_1
-  - r-base=3.5.1=he1ce5cd_1005
-  - r-brew=1.0_6=r35h6115d3f_1002
-  - r-callr=3.4.3=r35h6115d3f_0
-  - r-cli=2.0.2=r35h6115d3f_0
-  - r-clipr=0.7.0=r35h6115d3f_0
-  - r-codetools=0.2_16=r35h6115d3f_1001
-  - r-colorspace=1.4_1=r35h159158b_1
-  - r-commonmark=1.7=r35h159158b_1001
-  - r-covr=3.5.0=r35hc5da6b9_0
-  - r-crayon=1.3.4=r35h6115d3f_1002
-  - r-crosstalk=1.1.0.1=r35h6115d3f_0
-  - r-curl=4.3=r35h17f1fa6_0
-  - r-desc=1.2.0=r35h6115d3f_1002
-  - r-devtools=2.2.2=r35h6115d3f_0
-  - r-digest=0.6.25=r35hc5da6b9_1
-  - r-doparallel=1.0.15=r35h6115d3f_0
-  - r-dt=0.13=r35h6115d3f_0
-  - r-ellipsis=0.3.0=r35h159158b_0
-  - r-evaluate=0.14=r35h6115d3f_1
-  - r-fansi=0.4.1=r35h17f1fa6_0
-  - r-farver=2.0.3=r35hc5da6b9_0
-  - r-foreach=1.5.0=r35h6115d3f_0
-  - r-fs=1.4.1=r35hc5da6b9_0
-  - r-getopt=1.20.3=r35_1
-  - r-ggplot2=3.3.0=r35h6115d3f_0
-  - r-gh=1.1.0=r35h6115d3f_0
-  - r-git2r=0.24.0=r351h8950b8d_1
-  - r-glue=1.4.0=r35h17f1fa6_0
-  - r-gtable=0.3.0=r35h6115d3f_2
-  - r-highr=0.8=r35h6115d3f_1
-  - r-htmltools=0.4.0=r35hc5da6b9_0
-  - r-htmlwidgets=1.5.1=r35h6115d3f_0
-  - r-httr=1.4.1=r35h6115d3f_1
-  - r-ini=0.3.1=r35h6115d3f_1002
-  - r-isoband=0.2.1=r35hc5da6b9_0
-  - r-iterators=1.0.12=r35h6115d3f_0
-  - r-jsonlite=1.6.1=r35h17f1fa6_0
-  - r-knitr=1.28=r35h6115d3f_0
-  - r-labeling=0.3=r35h6115d3f_1002
-  - r-later=1.0.0=r35hc5da6b9_0
-  - r-lattice=0.20_41=r35h17f1fa6_1
-  - r-lazyeval=0.2.2=r35h159158b_1
-  - r-lifecycle=0.2.0=r35h6115d3f_0
-  - r-magrittr=1.5=r35h6115d3f_1002
-  - r-markdown=1.1=r35h159158b_0
-  - r-mass=7.3_51.6=r35h17f1fa6_1
-  - r-matrix=1.2_18=r35h26f5615_2
-  - r-memoise=1.1.0=r35h6115d3f_1003
-  - r-mgcv=1.8_31=r35h26f5615_0
-  - r-mime=0.9=r35h17f1fa6_0
-  - r-munsell=0.5.0=r35h6115d3f_1002
-  - r-nlme=3.1_141=r35haf69682_1
-  - r-openssl=1.1=r351hd0de0e5_1001
-  - r-optparse=1.6.6=r35h6115d3f_0
-  - r-pillar=1.4.3=r35h6115d3f_0
-  - r-pkgbuild=1.0.7=r35h6115d3f_0
-  - r-pkgconfig=2.0.3=r35h6115d3f_0
-  - r-pkgload=1.0.2=r35hf99fc2c_1001
-  - r-plyr=1.8.6=r35hc5da6b9_0
-  - r-praise=1.0.0=r35h6115d3f_1003
-  - r-prettyunits=1.1.1=r35h6115d3f_0
-  - r-processx=3.4.2=r35h17f1fa6_0
-  - r-promises=1.1.0=r35hc5da6b9_0
-  - r-ps=1.3.2=r35h17f1fa6_0
-  - r-purrr=0.3.4=r35h17f1fa6_0
-  - r-r6=2.4.1=r35h6115d3f_0
-  - r-rcmdcheck=1.3.3=r35h6115d3f_2
-  - r-rcolorbrewer=1.1_2=r35h6115d3f_1002
-  - r-rcpp=1.0.4.6=r35hc5da6b9_0
-  - r-rematch2=2.1.2=r35h6115d3f_0
-  - r-remotes=2.1.1=r35h6115d3f_0
-  - r-reshape2=1.4.4=r35hc5da6b9_0
-  - r-rex=1.2.0=r35h6115d3f_0
-  - r-rlang=0.4.5=r35h17f1fa6_2
-  - r-roxygen2=7.1.0=r35hc5da6b9_0
-  - r-rprojroot=1.3_2=r35h6115d3f_1002
-  - r-rstudioapi=0.11=r35h6115d3f_0
-  - r-rversions=2.0.1=r35h6115d3f_0
-  - r-scales=1.1.0=r35h6115d3f_0
-  - r-sessioninfo=1.1.1=r35h6115d3f_1001
-  - r-stringi=1.4.3=r35hf99fc2c_2
-  - r-stringr=1.4.0=r35h6115d3f_1
-  - r-testthat=2.3.2=r35hc5da6b9_0
-  - r-tibble=3.0.1=r35h17f1fa6_0
-  - r-usethis=1.6.1=r35h6115d3f_0
-  - r-utf8=1.1.4=r35h17f1fa6_1002
-  - r-vctrs=0.2.4=r35h17f1fa6_0
-  - r-viridislite=0.3.0=r35h6115d3f_1002
-  - r-whisker=0.4=r35h6115d3f_0
-  - r-withr=2.2.0=r35h6115d3f_0
-  - r-xfun=0.13=r35h6115d3f_0
-  - r-xml2=1.3.2=r35hc5da6b9_0
-  - r-xopen=1.0.0=r35h6115d3f_1002
-  - r-yaml=2.2.1=r35h17f1fa6_0
-  - r-zeallot=0.1.0=r35h6115d3f_1001
-  - readline=7.0=hcfe32e1_1001
-  - setuptools=58.0.4=py36h79c6626_2
-  - sqlite=3.28.0=h9721f7c_0
-  - tapi=1100.0.11=h879752b_0
+  - pip=25.0.1=pyh145f28c_0
+  - pixman=0.44.2=h1fd1274_0
+  - python=3.13.3=h534c281_100_cp313
+  - python_abi=3.13=6_cp313
+  - pyyaml=6.0.2=py313h717bdf5_2
+  - r-abind=1.4_5=r43hc72bb7e_1006
+  - r-ape=5.8_1=r43h4a69edb_0
+  - r-aplot=0.2.5=r43hc72bb7e_0
+  - r-askpass=1.2.1=r43h199b6f9_0
+  - r-assertthat=0.2.1=r43hc72bb7e_5
+  - r-backports=1.5.0=r43h6b9d099_1
+  - r-base=4.3.3=h11f04cc_16
+  - r-base64enc=0.1_3=r43h6b9d099_1007
+  - r-bitops=1.0_9=r43h199b6f9_0
+  - r-boot=1.3_31=r43hc72bb7e_0
+  - r-brew=1.0_10=r43hc72bb7e_1
+  - r-brio=1.1.5=r43h6b9d099_1
+  - r-broom=1.0.8=r43hc72bb7e_0
+  - r-bslib=0.9.0=r43hc72bb7e_0
+  - r-cachem=1.1.0=r43h6b9d099_1
+  - r-callr=3.7.6=r43hc72bb7e_1
+  - r-car=3.1_3=r43hc72bb7e_0
+  - r-cardata=3.0_5=r43hc72bb7e_3
+  - r-caret=6.0_94=r43h6b9d099_2
+  - r-class=7.3_23=r43h79f565e_0
+  - r-cli=3.6.4=r43h2711daa_1
+  - r-clipr=0.8.0=r43hc72bb7e_3
+  - r-clock=0.7.3=r43h2711daa_0
+  - r-codetools=0.2_20=r43hc72bb7e_1
+  - r-colorspace=2.1_1=r43h6b9d099_0
+  - r-commonmark=1.9.5=r43h79f565e_0
+  - r-conquer=1.3.3=r43h6a638e2_4
+  - r-corrplot=0.95=r43hc72bb7e_0
+  - r-cowplot=1.1.3=r43hc72bb7e_1
+  - r-cpp11=0.5.2=r43h785f33e_1
+  - r-crayon=1.5.3=r43hc72bb7e_1
+  - r-credentials=2.0.2=r43hc72bb7e_0
+  - r-curl=6.2.2=r43h03d0d4d_0
+  - r-data.table=1.17.0=r43h3ffa6c1_0
+  - r-deriv=4.1.6=r43hc72bb7e_0
+  - r-desc=1.4.3=r43hc72bb7e_1
+  - r-devtools=2.4.5=r43hc72bb7e_3
+  - r-diagram=1.6.5=r43ha770c72_3
+  - r-diffobj=0.3.5=r43h6b9d099_3
+  - r-digest=0.6.37=r43h25d921d_0
+  - r-doby=4.6.26=r43hc72bb7e_0
+  - r-doparallel=1.0.17=r43hc72bb7e_3
+  - r-downlit=0.4.4=r43hc72bb7e_1
+  - r-dplyr=1.1.4=r43h25d921d_1
+  - r-e1071=1.7_16=r43hc83a2cd_0
+  - r-ellipsis=0.3.2=r43h6b9d099_3
+  - r-evaluate=1.0.3=r43hc72bb7e_0
+  - r-fansi=1.0.6=r43h6b9d099_1
+  - r-farver=2.1.2=r43h25d921d_1
+  - r-fastmap=1.2.0=r43h25d921d_1
+  - r-fontawesome=0.5.3=r43hc72bb7e_0
+  - r-foreach=1.5.2=r43hc72bb7e_3
+  - r-formula=1.2_5=r43hc72bb7e_2
+  - r-fs=1.6.6=r43h2711daa_0
+  - r-future=1.40.0=r43h785f33e_0
+  - r-future.apply=1.11.3=r43hc72bb7e_0
+  - r-generics=0.1.3=r43hc72bb7e_3
+  - r-gert=2.1.4=r43h8d37685_0
+  - r-getopt=1.20.4=r43ha770c72_1
+  - r-ggfun=0.1.8=r43hc72bb7e_0
+  - r-ggplot2=3.5.2=r43hc72bb7e_0
+  - r-ggplotify=0.1.2=r43hc72bb7e_1
+  - r-ggpubr=0.6.0=r43hc72bb7e_2
+  - r-ggrepel=0.9.6=r43hc83a2cd_0
+  - r-ggsci=3.2.0=r43hc72bb7e_1
+  - r-ggsignif=0.6.4=r43hc72bb7e_2
+  - r-gh=1.4.1=r43hc72bb7e_1
+  - r-gitcreds=0.1.2=r43hc72bb7e_3
+  - r-globals=0.16.3=r43hc72bb7e_1
+  - r-glue=1.8.0=r43h199b6f9_0
+  - r-gower=1.0.1=r43h6b9d099_2
+  - r-gridextra=2.3=r43hc72bb7e_1006
+  - r-gridgraphics=0.5_1=r43hc72bb7e_3
+  - r-gtable=0.3.6=r43hc72bb7e_0
+  - r-hardhat=1.4.1=r43hc72bb7e_0
+  - r-highr=0.11=r43hc72bb7e_1
+  - r-htmltools=0.5.8.1=r43h25d921d_1
+  - r-htmlwidgets=1.6.4=r43h785f33e_3
+  - r-httpuv=1.6.15=r43h25d921d_1
+  - r-httr2=1.1.2=r43hc72bb7e_0
+  - r-ini=0.3.1=r43hc72bb7e_1006
+  - r-ipred=0.9_15=r43h6b9d099_1
+  - r-isoband=0.2.7=r43h25d921d_3
+  - r-iterators=1.0.14=r43hc72bb7e_3
+  - r-jquerylib=0.1.4=r43hc72bb7e_3
+  - r-jsonlite=1.9.1=r43h79f565e_0
+  - r-kernsmooth=2.23_26=r43hd6847f7_0
+  - r-knitr=1.50=r43hc72bb7e_0
+  - r-labeling=0.4.3=r43hc72bb7e_1
+  - r-later=1.4.2=r43h2711daa_0
+  - r-lattice=0.22_7=r43h79f565e_0
+  - r-lava=1.8.1=r43hc72bb7e_0
+  - r-lazyeval=0.2.2=r43h6b9d099_5
+  - r-lifecycle=1.0.4=r43hc72bb7e_1
+  - r-listenv=0.9.1=r43hc72bb7e_1
+  - r-lme4=1.1_35.5=r43h25d921d_1
+  - r-lobstr=1.1.2=r43h25d921d_4
+  - r-lubridate=1.9.4=r43h79f565e_0
+  - r-magrittr=2.0.3=r43h6b9d099_3
+  - r-mass=7.3_60.0.1=r43h6b9d099_1
+  - r-matrix=1.6_5=r43h9cf22e7_1
+  - r-matrixmodels=0.5_4=r43hc72bb7e_0
+  - r-matrixstats=1.5.0=r43h79f565e_0
+  - r-memoise=2.0.1=r43hc72bb7e_3
+  - r-mgcv=1.9_3=r43h1794a52_0
+  - r-microbenchmark=1.5.0=r43h199b6f9_0
+  - r-mime=0.13=r43h79f565e_0
+  - r-miniui=0.1.1.1=r43hc72bb7e_1005
+  - r-minqa=1.2.8=r43hc1e73ce_0
+  - r-modelmetrics=1.2.2.2=r43hccab667_4
+  - r-modelr=0.1.11=r43hc72bb7e_2
+  - r-munsell=0.5.1=r43hc72bb7e_1
+  - r-nlme=3.1_168=r43hb3c2f18_0
+  - r-nloptr=2.2.1=r43h1fbd797_0
+  - r-nnet=7.3_20=r43h79f565e_0
+  - r-numderiv=2016.8_1.1=r43hc72bb7e_6
+  - r-openssl=2.3.2=r43he2fe99f_0
+  - r-optparse=1.7.5=r43hc72bb7e_1
+  - r-parallelly=1.43.0=r43h79f565e_0
+  - r-patchwork=1.3.0=r43hc72bb7e_0
+  - r-pbkrtest=0.5.3=r43hc72bb7e_0
+  - r-pillar=1.10.2=r43hc72bb7e_0
+  - r-pkgbuild=1.4.7=r43hc72bb7e_0
+  - r-pkgconfig=2.0.3=r43hc72bb7e_4
+  - r-pkgdown=2.1.1=r43hc72bb7e_0
+  - r-pkgload=1.4.0=r43hc72bb7e_0
+  - r-plyr=1.8.9=r43h25d921d_1
+  - r-polynom=1.4_1=r43hc72bb7e_3
+  - r-praise=1.0.0=r43hc72bb7e_1008
+  - r-prettyunits=1.2.0=r43hc72bb7e_1
+  - r-proc=1.18.5=r43h25d921d_1
+  - r-processx=3.8.6=r43h79f565e_0
+  - r-prodlim=2024.06.25=r43h25d921d_1
+  - r-profvis=0.4.0=r43h199b6f9_0
+  - r-progressr=0.15.1=r43hc72bb7e_0
+  - r-promises=1.3.2=r43h2711daa_0
+  - r-proxy=0.4_27=r43h6b9d099_3
+  - r-pryr=0.1.6=r43h25d921d_2
+  - r-ps=1.9.1=r43h79f565e_0
+  - r-purrr=1.0.4=r43h79f565e_0
+  - r-quantreg=6.1=r43hfe2c0ad_0
+  - r-r6=2.6.1=r43hc72bb7e_0
+  - r-ragg=1.4.0=r43hd195363_0
+  - r-rappdirs=0.3.3=r43h6b9d099_3
+  - r-rcmdcheck=1.4.0=r43h785f33e_3
+  - r-rcolorbrewer=1.1_3=r43h785f33e_3
+  - r-rcpp=1.0.14=r43h2711daa_0
+  - r-rcpparmadillo=14.4.1_1=r43hda2d453_0
+  - r-rcppeigen=0.3.4.0.2=r43haa2a3db_0
+  - r-rcurl=1.98_1.16=r43h761bb74_1
+  - r-recipes=1.2.1=r43hc72bb7e_0
+  - r-rematch2=2.1.2=r43hc72bb7e_4
+  - r-remotes=2.5.0=r43hc72bb7e_1
+  - r-reshape2=1.4.4=r43h25d921d_4
+  - r-rlang=1.1.6=r43h2711daa_0
+  - r-rmarkdown=2.29=r43hc72bb7e_0
+  - r-roxygen2=7.3.2=r43h25d921d_1
+  - r-rpart=4.1.24=r43h79f565e_0
+  - r-rprojroot=2.0.4=r43hc72bb7e_1
+  - r-rstatix=0.7.2=r43hc72bb7e_2
+  - r-rstudioapi=0.17.1=r43hc72bb7e_0
+  - r-rversions=2.1.2=r43hc72bb7e_3
+  - r-sass=0.4.10=r43h2711daa_0
+  - r-scales=1.3.0=r43hc72bb7e_1
+  - r-sessioninfo=1.2.3=r43hc72bb7e_0
+  - r-shape=1.4.6.1=r43ha770c72_1
+  - r-shiny=1.10.0=r43h785f33e_0
+  - r-sourcetools=0.1.7_1=r43h25d921d_2
+  - r-sparsem=1.84_2=r43h9612530_0
+  - r-sparsevctrs=0.3.2=r43h79f565e_0
+  - r-squarem=2021.1=r43hc72bb7e_3
+  - r-stringi=1.8.7=r43h586c1d5_0
+  - r-stringr=1.5.1=r43h785f33e_1
+  - r-survival=3.8_3=r43h79f565e_0
+  - r-sys=3.4.3=r43h199b6f9_0
+  - r-systemfonts=1.2.1=r43h40ab3c9_0
+  - r-testthat=3.2.3=r43h2711daa_0
+  - r-textshaping=1.0.0=r43h2456159_0
+  - r-tibble=3.2.1=r43h6b9d099_3
+  - r-tidyr=1.3.1=r43h25d921d_1
+  - r-tidyselect=1.2.1=r43hc72bb7e_1
+  - r-tidytree=0.4.6=r43hc72bb7e_1
+  - r-timechange=0.3.0=r43h25d921d_1
+  - r-timedate=4041.110=r43hc72bb7e_0
+  - r-tinytex=0.56=r43hc72bb7e_0
+  - r-tzdb=0.5.0=r43h2711daa_0
+  - r-urlchecker=1.0.1=r43hc72bb7e_3
+  - r-usethis=3.1.0=r43hc72bb7e_0
+  - r-utf8=1.2.4=r43h6b9d099_1
+  - r-vctrs=0.6.5=r43h25d921d_1
+  - r-viridislite=0.4.2=r43hc72bb7e_2
+  - r-waldo=0.6.1=r43hc72bb7e_0
+  - r-whisker=0.4.1=r43hc72bb7e_2
+  - r-withr=3.0.2=r43hc72bb7e_0
+  - r-xfun=0.52=r43h2711daa_0
+  - r-xml2=1.3.8=r43hcb51277_0
+  - r-xopen=1.0.1=r43hc72bb7e_1
+  - r-xtable=1.8_4=r43hc72bb7e_6
+  - r-yaml=2.3.10=r43h6b9d099_0
+  - r-yulab.utils=0.2.0=r43hc72bb7e_0
+  - r-zip=2.3.2=r43h79f565e_0
+  - readline=8.2=h7cca4af_2
+  - rpsbproc=0.5.0=heca6186_3
+  - setuptools=78.1.0=pyhff2d567_0
+  - sigtool=0.1.3=h88f4db0_0
+  - tapi=1300.6.5=h390ca13_0
   - tk=8.6.13=h1abcd95_1
   - tktable=2.10=hba9d6f1_6
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - xz=5.6.4=h357f2ed_0
-  - xz-gpl-tools=5.6.4=h357f2ed_0
-  - xz-tools=5.6.4=hd471939_0
-  - zlib=1.2.13=h87427d6_6
-  - zstd=1.5.6=h915ae27_0
+  - toml=0.10.2=pyhd8ed1ab_1
+  - tomlkit=0.13.2=pyha770c72_1
+  - tzdata=2025b=h78e105d_0
+  - wget=1.21.4=hca547e6_0
+  - xmltodict=0.14.2=pyhd8ed1ab_1
+  - yaml=0.2.5=h0d85af4_2
+  - yq=3.4.3=pyhd8ed1ab_1
+  - zlib=1.3.1=hd23fc13_2
+  - zstd=1.5.7=h8210216_2
 
+prefix: "/opt/homebrew/Cellar/micromamba/2.0.8/envs/pannagram"
