--- a/pannagram.yml
+++ b/pannagram.yml
@@ -4,249 +4,386 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-# Common versions:
-  - _r-mutex=1.0.1
-  - argcomplete=3.5.1
-  - bioconductor-biocgenerics=0.48.1
-  - bioconductor-biostrings=2.70.1
-  - bioconductor-data-packages=20231203
-  - bioconductor-genomeinfodb=1.38.1
-  - bioconductor-genomeinfodbdata=1.2.11
-  - bioconductor-iranges=2.36.0
-  - bioconductor-msa=1.34.0
-  - bioconductor-muscle=3.44.0
-  - bioconductor-rhdf5=2.46.1
-  - bioconductor-rhdf5filters=1.14.1
-  - bioconductor-rhdf5lib=1.24.0
-  - bioconductor-s4vectors=0.40.2
-  - bioconductor-xvector=0.42.0
-  - bioconductor-zlibbioc=1.48.0
-  - bwidget=1.9.14
-  - bzip2=1.0.8
-  - ca-certificates=2024.8.30
-  - cairo=1.18.0
-  - curl=8.10.1
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - freetype=2.12.1
-  - fribidi=1.0.10
-  - gawk=5.3.1
-  - gmp=6.3.0
-  - graphite2=1.3.13
-  - gsl=2.7
-  - harfbuzz=9.0.0
-  - jq=1.5
-  - krb5=1.21.3
-  - lerc=4.0.0
-  - libasprintf=0.22.5
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libcurl=8.10.1
-  - libdeflate=1.22
-  - libedit=3.1.20191231
-  - libev=4.33
-  - libffi=3.4.2
-  - libgettextpo=0.22.5
-  - libglib=2.82.2
-  - libiconv=1.17
-  - libjpeg-turbo=3.0.0
-  - liblapack=3.9.0
-  - libpng=1.6.44
-  - libssh2=1.11.0
-  - libtiff=4.7.0
-  - libuv=1.49.2
-  - libwebp-base=1.4.0
-  - libzlib=1.3.1
-  - mafft=7.525
-  - make=4.4.1
-  - mpfr=4.2.1
-  - ncurses=6.5
-  - openssl=3.3.2
-  - pandoc=3.5
-  - pango=1.54.0
-  - parallel=20170422
-  - pcre2=10.44
-  - perl=5.22.0.1
-  - pyyaml=6.0.2
-  - r-askpass=1.2.1
-  - r-assertthat=0.2.1
-  - r-base=4.3.3
-  - r-base64enc=0.1_3
-  - r-bitops=1.0_9
-  - r-brew=1.0_10
-  - r-brio=1.1.5
-  - r-bslib=0.8.0
-  - r-cachem=1.1.0
-  - r-callr=3.7.6
-  - r-cli=3.6.3
-  - r-clipr=0.8.0
-  - r-codetools=0.2_20
-  - r-colorspace=2.1_1
-  - r-commonmark=1.9.2
-  - r-cpp11=0.5.0
-  - r-crayon=1.5.3
-  - r-credentials=2.0.2
-  - r-curl=5.2.1
-  - r-desc=1.4.3
-  - r-devtools=2.4.5
-  - r-diffobj=0.3.5
-  - r-digest=0.6.37
-  - r-doparallel=1.0.17
-  - r-downlit=0.4.4
-  - r-ellipsis=0.3.2
-  - r-evaluate=1.0.1
-  - r-fansi=1.0.6
-  - r-farver=2.1.2
-  - r-fastmap=1.2.0
-  - r-fontawesome=0.5.2
-  - r-foreach=1.5.2
-  - r-gert=2.1.4
-  - r-getopt=1.20.4
-  - r-ggplot2=3.5.1
-  - r-gh=1.4.1
-  - r-gitcreds=0.1.2
-  - r-glue=1.8.0
-  - r-highr=0.11
-  - r-htmltools=0.5.8.1
-  - r-htmlwidgets=1.6.4
-  - r-httpuv=1.6.15
-  - r-ini=0.3.1
-  - r-isoband=0.2.7
-  - r-iterators=1.0.14
-  - r-jquerylib=0.1.4
-  - r-jsonlite=1.8.9
-  - r-labeling=0.4.3
-  - r-later=1.3.2
-  - r-lattice=0.22_6
-  - r-lifecycle=1.0.4
-  - r-lobstr=1.1.2
-  - r-magrittr=2.0.3
-  - r-mass=7.3_60.0.1
-  - r-matrix=1.6_5
-  - r-memoise=2.0.1
-  - r-mgcv=1.9_1
-  - r-mime=0.12
-  - r-miniui=0.1.1.1
-  - r-munsell=0.5.1
-  - r-nlme=3.1_165
-  - r-openssl=2.2.2
-  - r-optparse=1.7.5
-  - r-pillar=1.9.0
-  - r-pkgconfig=2.0.3
-  - r-pkgdown=2.1.1
-  - r-pkgload=1.4.0
-  - r-plyr=1.8.9
-  - r-praise=1.0.0
-  - r-prettyunits=1.2.0
-  - r-processx=3.8.4
-  - r-profvis=0.4.0
-  - r-promises=1.3.0
-  - r-pryr=0.1.6
-  - r-purrr=1.0.2
-  - r-r6=2.5.1
-  - r-ragg=1.3.3
-  - r-rappdirs=0.3.3
-  - r-rcmdcheck=1.4.0
-  - r-rcolorbrewer=1.1_3
-  - r-rcurl=1.98_1.16
-  - r-rematch2=2.1.2
-  - r-remotes=2.5.0
-  - r-reshape2=1.4.4
-  - r-rlang=1.1.4
-  - r-roxygen2=7.3.2
-  - r-rprojroot=2.0.4
-  - r-rversions=2.1.2
-  - r-sass=0.4.9
-  - r-scales=1.3.0
-  - r-sessioninfo=1.2.2
-  - r-shiny=1.9.1
-  - r-sourcetools=0.1.7_1
-  - r-stringi=1.8.4
-  - r-stringr=1.5.1
-  - r-sys=3.4.3
-  - r-systemfonts=1.1.0
-  - r-testthat=3.2.1.1
-  - r-textshaping=0.4.0
-  - r-tibble=3.2.1
-  - r-urlchecker=1.0.1
-  - r-usethis=3.0.0
-  - r-utf8=1.2.4
-  - r-vctrs=0.6.5
-  - r-viridislite=0.4.2
-  - r-whisker=0.4.1
-  - r-xfun=0.48
-  - r-xml2=1.3.6
-  - r-xopen=1.0.1
-  - r-xtable=1.8_4
-  - r-yaml=2.3.10
-  - r-zip=2.3.1
-  - readline=8.2
-  - tk=8.6.13
-  - tktable=2.10
-  - toml=0.10.2
-  - tomlkit=0.13.2
-  - tzdata=2024b
-  - xmltodict=0.14.2
-  - xz=5.2.6
-  - yaml=0.2.5
-  - yq=3.4.3
-  - zlib=1.3.1
-  - zstd=1.5.6
-# Lowest common version:
-  - blast=2.5.0
-  - c-ares=1.32.3
-  - fontconfig=2.14.2
-  - icu=73.2
-  - libexpat=2.6.3
-  - libgfortran5=13.2.0
-  - libgit2=1.8.1
-  - libnghttp2=1.58.0
-  - libopenblas=0.3.27
-  - libsqlite=3.46.1
-  - libxml2=2.11.6
-  - pip=24.2
-  - pixman=0.43.2
-  - python=3.12.7
-  - python_abi=3.12
-  - r-fs=1.6.4
-  - r-gtable=0.3.5
-  - r-httr2=1.0.5
-  - r-knitr=1.48
-  - r-pkgbuild=1.4.4
-  - r-ps=1.8.0
-  - r-rcpp=1.0.13
-  - r-rmarkdown=2.28
-  - r-rstudioapi=0.16.0
-  - r-tinytex=0.53
-  - r-waldo=0.5.3
-  - r-withr=3.0.1
-  - setuptools=75.1.0
-
-# name: pannagram
-# channels:
-#   - bioconda
-#   - conda-forge
-# dependencies:
-#   - r-base==4.3.3
-#   - r-devtools==2.4.5
-#   - r-testthat==3.2.1.1
-#   - r-ggplot2==3.5.1
-#   - r-reshape2==1.4.4
-#   - r-roxygen2==7.3.2
-#   - r-foreach==1.5.2
-#   - r-crayon==1.5.3
-#   - r-optparse==1.7.5
-#   - r-doparallel==1.0.17
-#   - r-stringi==1.8.4
-#   - r-usethis==3.0.0
-#   - bioconductor-rhdf5==2.46.1
-#   - bioconductor-muscle==3.44.0
-#   - bioconductor-msa==1.34.0
-#   - blast==2.16.0
-#   - mafft==7.525
-#   - parallel==20170422
-  
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - _r-mutex=1.0.1=anacondar_1
+  - argcomplete=3.6.2=pyhd8ed1ab_0
+  - binutils_impl_linux-64=2.43=h4bf12b8_4
+  - bioconductor-biocgenerics=0.52.0=r44hdfd78af_3
+  - bioconductor-biostrings=2.74.0=r44h3df3fcb_1
+  - bioconductor-data-packages=20250401=hdfd78af_0
+  - bioconductor-genomeinfodb=1.42.0=r44hdfd78af_2
+  - bioconductor-genomeinfodbdata=1.2.13=r44hdfd78af_0
+  - bioconductor-ggtree=3.14.0=r44hdfd78af_0
+  - bioconductor-iranges=2.40.0=r44h3df3fcb_2
+  - bioconductor-msa=1.38.0=r44hc247a5b_0
+  - bioconductor-muscle=3.48.0=r44he5774e6_0
+  - bioconductor-rhdf5=2.50.0=r44h77050f0_1
+  - bioconductor-rhdf5filters=1.18.0=r44h77050f0_1
+  - bioconductor-rhdf5lib=1.28.0=r44h15a9599_0
+  - bioconductor-s4vectors=0.44.0=r44h3df3fcb_2
+  - bioconductor-treeio=1.30.0=r44hdfd78af_0
+  - bioconductor-ucsc.utils=1.2.0=r44h9ee0642_1
+  - bioconductor-xvector=0.46.0=r44h15a9599_2
+  - bioconductor-zlibbioc=1.52.0=r44h3df3fcb_2
+  - blast=2.16.0=h66d330f_5
+  - bwidget=1.10.1=ha770c72_0
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.5=hb9d3cd8_0
+  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - cairo=1.18.4=h3394656_0
+  - curl=8.13.0=h332b0f4_0
+  - entrez-direct=22.4=he881be0_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.13.3=ha770c72_1
+  - fribidi=1.0.10=h36c2ea0_0
+  - gawk=5.3.1=hcd3d067_0
+  - gcc_impl_linux-64=15.1.0=h4393ad2_2
+  - gfortran_impl_linux-64=15.1.0=h3b9cdf2_2
+  - glpk=5.0=h445213a_0
+  - gmp=6.3.0=hac33072_2
+  - graphite2=1.3.13=h59595ed_1003
+  - gsl=2.7=he838d99_0
+  - gxx_impl_linux-64=15.1.0=h6a1bac1_2
+  - harfbuzz=11.2.1=h3beb420_0
+  - icu=75.1=he02047a_0
+  - jq=1.5=0
+  - kernel-headers_linux-64=3.10.0=he073ed8_18
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
+  - ld_impl_linux-64=2.43=h712a8e2_4
+  - lerc=4.0.0=h0aef613_1
+  - libasprintf=0.24.1=h8e693c7_0
+  - libblas=3.9.0=31_h59b9bed_openblas
+  - libcblas=3.9.0=31_he106b2a_openblas
+  - libcurl=8.13.0=h332b0f4_0
+  - libdeflate=1.23=h86f0d12_0
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libev=4.33=hd590300_2
+  - libexpat=2.7.0=h5888daf_0
+  - libffi=3.4.6=h2dba641_1
+  - libfreetype=2.13.3=ha770c72_1
+  - libfreetype6=2.13.3=h48d6fc4_1
+  - libgcc=15.1.0=h767d61c_2
+  - libgcc-devel_linux-64=15.1.0=h4c094af_102
+  - libgcc-ng=15.1.0=h69a702a_2
+  - libgettextpo=0.24.1=h5888daf_0
+  - libgfortran=15.1.0=h69a702a_2
+  - libgfortran-ng=15.1.0=h69a702a_2
+  - libgfortran5=15.1.0=hcea5267_2
+  - libgit2=1.8.4=hd24f944_1
+  - libglib=2.84.1=h2ff4ddf_0
+  - libgomp=15.1.0=h767d61c_2
+  - libiconv=1.18=h4ce23a2_1
+  - libidn2=2.3.8=ha4ef2c3_0
+  - libjpeg-turbo=3.1.0=hb9d3cd8_0
+  - liblapack=3.9.0=31_h7ac8fdf_openblas
+  - liblzma=5.8.1=hb9d3cd8_1
+  - libmpdec=4.0.0=h4bc722e_0
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libopenblas=0.3.29=pthreads_h94d23a6_0
+  - libpng=1.6.47=h943b412_0
+  - libsanitizer=15.1.0=h97b714f_2
+  - libsqlite=3.49.2=hee588c1_0
+  - libssh2=1.11.1=hcf80075_0
+  - libstdcxx=15.1.0=h8f9b012_2
+  - libstdcxx-devel_linux-64=15.1.0=h4c094af_102
+  - libstdcxx-ng=15.1.0=h4852527_2
+  - libtiff=4.7.0=hd9ff511_4
+  - libunistring=0.9.10=h7f98852_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libuv=1.51.0=hb9d3cd8_0
+  - libwebp-base=1.5.0=h851e524_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxml2=2.13.8=h4bc477f_0
+  - libzlib=1.3.1=hb9d3cd8_2
+  - mafft=7.525=h031d066_1
+  - make=4.4.1=hb9d3cd8_2
+  - mpfr=4.2.1=h90cbb55_3
+  - ncbi-vdb=3.2.1=h9948957_0
+  - ncurses=6.5=h2d0b736_3
+  - nlopt=2.9.0=py313h438eccb_0
+  - numpy=2.2.6=py313h17eae1a_0
+  - openssl=3.5.0=h7b32b05_1
+  - pandoc=3.7.0.1=ha770c72_0
+  - pango=1.56.3=h9ac818e_1
+  - parallel=20170422=pl5.22.0_0
+  - pcre2=10.44=hc749103_2
+  - perl=5.22.0.1=0
+  - perl-app-cpanminus=1.7043=pl5.22.0_0
+  - perl-archive-tar=2.18=pl5.22.0_2
+  - perl-carp=1.38=pl5.22.0_0
+  - perl-common-sense=3.74=0
+  - perl-compress-raw-bzip2=2.069=1
+  - perl-compress-raw-zlib=2.069=3
+  - perl-data-dumper=2.161=pl5.22.0_0
+  - perl-exporter=5.72=pl5.22.0_0
+  - perl-exporter-tiny=0.042=1
+  - perl-extutils-makemaker=7.24=pl5.22.0_1
+  - perl-io-compress=2.069=pl5.22.0_2
+  - perl-io-zlib=1.10=1
+  - perl-json=2.90=1
+  - perl-json-xs=2.34=0
+  - perl-list-moreutils=0.428=pl5.22.0_0
+  - perl-pathtools=3.73=h470a237_2
+  - perl-scalar-list-utils=1.45=2
+  - perl-test-more=1.001002=pl5.22.0_0
+  - perl-threaded=5.32.1=hdfd78af_1
+  - pip=25.1.1=pyh145f28c_0
+  - pixman=0.46.0=h29eaf8c_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - python=3.13.3=hf636f53_101_cp313
+  - python_abi=3.13=7_cp313
+  - pyyaml=6.0.2=py313h8060acc_2
+  - r-abind=1.4_5=r44hc72bb7e_1006
+  - r-ape=5.8_1=r44hb79369c_0
+  - r-aplot=0.2.5=r44hc72bb7e_0
+  - r-askpass=1.2.1=r44h2b5f3a1_0
+  - r-assertthat=0.2.1=r44hc72bb7e_5
+  - r-backports=1.5.0=r44hb1dbf0f_1
+  - r-base=4.4.3=h9c32bc2_0
+  - r-base64enc=0.1_3=r44hb1dbf0f_1007
+  - r-bit=4.6.0=r44h2b5f3a1_0
+  - r-bit64=4.6.0_1=r44h2b5f3a1_0
+  - r-boot=1.3_31=r44hc72bb7e_0
+  - r-brew=1.0_10=r44hc72bb7e_1
+  - r-brio=1.1.5=r44hb1dbf0f_1
+  - r-broom=1.0.8=r44hc72bb7e_0
+  - r-broom.helpers=1.21.0=r44hc72bb7e_0
+  - r-bslib=0.9.0=r44hc72bb7e_0
+  - r-cachem=1.1.0=r44hb1dbf0f_1
+  - r-callr=3.7.6=r44hc72bb7e_1
+  - r-car=3.1_3=r44hc72bb7e_0
+  - r-cardata=3.0_5=r44hc72bb7e_3
+  - r-cards=0.6.0=r44hc72bb7e_0
+  - r-caret=6.0_94=r44hdb488b9_2
+  - r-class=7.3_23=r44h2b5f3a1_0
+  - r-cli=3.6.5=r44h93ab643_0
+  - r-clipr=0.8.0=r44hc72bb7e_3
+  - r-clock=0.7.3=r44h93ab643_0
+  - r-coda=0.19_4.1=r44hc72bb7e_1
+  - r-codetools=0.2_20=r44hc72bb7e_1
+  - r-colorspace=2.1_1=r44hdb488b9_0
+  - r-commonmark=1.9.5=r44h2b5f3a1_0
+  - r-conquer=1.3.3=r44hb424bfc_4
+  - r-corrplot=0.95=r44hc72bb7e_0
+  - r-cowplot=1.1.3=r44hc72bb7e_1
+  - r-cpp11=0.5.2=r44h785f33e_1
+  - r-crayon=1.5.3=r44hc72bb7e_1
+  - r-credentials=2.0.2=r44hc72bb7e_0
+  - r-curl=6.2.2=r44h2700575_0
+  - r-data.table=1.17.4=r44he23165d_0
+  - r-deriv=4.1.6=r44hc72bb7e_0
+  - r-desc=1.4.3=r44hc72bb7e_1
+  - r-devtools=2.4.5=r44hc72bb7e_3
+  - r-diagram=1.6.5=r44ha770c72_3
+  - r-diffobj=0.3.6=r44h2b5f3a1_0
+  - r-digest=0.6.37=r44h0d4f4ea_0
+  - r-doby=4.6.27=r44hc72bb7e_0
+  - r-doparallel=1.0.17=r44hc72bb7e_3
+  - r-downlit=0.4.4=r44hc72bb7e_1
+  - r-dplyr=1.1.4=r44h0d4f4ea_1
+  - r-e1071=1.7_16=r44h93ab643_0
+  - r-ellipsis=0.3.2=r44hb1dbf0f_3
+  - r-evaluate=1.0.3=r44hc72bb7e_0
+  - r-fansi=1.0.6=r44hb1dbf0f_1
+  - r-farver=2.1.2=r44ha18555a_1
+  - r-fastmap=1.2.0=r44ha18555a_1
+  - r-fontawesome=0.5.3=r44hc72bb7e_0
+  - r-forcats=1.0.0=r44hc72bb7e_2
+  - r-foreach=1.5.2=r44hc72bb7e_3
+  - r-formula=1.2_5=r44hc72bb7e_2
+  - r-fs=1.6.6=r44h93ab643_0
+  - r-future=1.49.0=r44h785f33e_0
+  - r-future.apply=1.11.3=r44hc72bb7e_0
+  - r-gbrd=0.4.12=r44hc72bb7e_1
+  - r-generics=0.1.4=r44hc72bb7e_0
+  - r-gert=2.1.4=r44h017ce79_0
+  - r-getopt=1.20.4=r44ha770c72_1
+  - r-ggally=2.2.1=r44hc72bb7e_1
+  - r-ggfun=0.1.8=r44hc72bb7e_0
+  - r-ggplot2=3.5.2=r44hc72bb7e_0
+  - r-ggplotify=0.1.2=r44hc72bb7e_1
+  - r-ggpubr=0.6.0=r44hc72bb7e_2
+  - r-ggrepel=0.9.6=r44h93ab643_0
+  - r-ggsci=3.2.0=r44hc72bb7e_1
+  - r-ggsignif=0.6.4=r44hc72bb7e_2
+  - r-ggstats=0.9.0=r44hc72bb7e_0
+  - r-gh=1.5.0=r44hc72bb7e_0
+  - r-gitcreds=0.1.2=r44hc72bb7e_3
+  - r-globals=0.18.0=r44hc72bb7e_0
+  - r-glue=1.8.0=r44h2b5f3a1_0
+  - r-gower=1.0.1=r44hb1dbf0f_2
+  - r-gridextra=2.3=r44hc72bb7e_1006
+  - r-gridgraphics=0.5_1=r44hc72bb7e_3
+  - r-gtable=0.3.6=r44hc72bb7e_0
+  - r-hardhat=1.4.1=r44hc72bb7e_0
+  - r-haven=2.5.4=r44h0d4f4ea_1
+  - r-highr=0.11=r44hc72bb7e_1
+  - r-hms=1.1.3=r44hc72bb7e_2
+  - r-htmltools=0.5.8.1=r44ha18555a_1
+  - r-htmlwidgets=1.6.4=r44h785f33e_3
+  - r-httpuv=1.6.15=r44ha18555a_1
+  - r-httr=1.4.7=r44hc72bb7e_1
+  - r-httr2=1.1.2=r44hc72bb7e_0
+  - r-igraph=2.0.3=r44h510f1ce_1
+  - r-ini=0.3.1=r44hc72bb7e_1006
+  - r-ipred=0.9_15=r44hdb488b9_1
+  - r-isoband=0.2.7=r44ha18555a_3
+  - r-iterators=1.0.14=r44hc72bb7e_3
+  - r-jquerylib=0.1.4=r44hc72bb7e_3
+  - r-jsonlite=2.0.0=r44h2b5f3a1_0
+  - r-kernsmooth=2.23_26=r44h8461fee_0
+  - r-knitr=1.50=r44hc72bb7e_0
+  - r-labeling=0.4.3=r44hc72bb7e_1
+  - r-labelled=2.14.1=r44hc72bb7e_0
+  - r-later=1.4.2=r44h93ab643_0
+  - r-lattice=0.22_7=r44h2b5f3a1_0
+  - r-lava=1.8.1=r44hc72bb7e_0
+  - r-lazyeval=0.2.2=r44hb1dbf0f_5
+  - r-lifecycle=1.0.4=r44hc72bb7e_1
+  - r-listenv=0.9.1=r44hc72bb7e_1
+  - r-lme4=1.1_37=r44h93ab643_0
+  - r-lobstr=1.1.2=r44ha18555a_4
+  - r-lubridate=1.9.4=r44h2b5f3a1_0
+  - r-magrittr=2.0.3=r44hb1dbf0f_3
+  - r-mass=7.3_64=r44h2b5f3a1_0
+  - r-matrix=1.7_3=r44h2ae2be5_0
+  - r-matrixmodels=0.5_4=r44hc72bb7e_0
+  - r-matrixstats=1.5.0=r44h2b5f3a1_0
+  - r-memoise=2.0.1=r44hc72bb7e_3
+  - r-mgcv=1.9_3=r44h2ae2be5_0
+  - r-microbenchmark=1.5.0=r44h2b5f3a1_0
+  - r-mime=0.13=r44h2b5f3a1_0
+  - r-miniui=0.1.2=r44hc72bb7e_0
+  - r-minqa=1.2.8=r44ha936806_0
+  - r-modelmetrics=1.2.2.2=r44h0d4f4ea_4
+  - r-modelr=0.1.11=r44hc72bb7e_2
+  - r-munsell=0.5.1=r44hc72bb7e_1
+  - r-network=1.19.0=r44h2b5f3a1_0
+  - r-nlme=3.1_168=r44hb67ce94_0
+  - r-nloptr=2.2.1=r44hb8c4c88_0
+  - r-nnet=7.3_20=r44h2b5f3a1_0
+  - r-numderiv=2016.8_1.1=r44hc72bb7e_6
+  - r-openssl=2.3.3=r44he8289e2_0
+  - r-optparse=1.7.5=r44hc72bb7e_1
+  - r-parallelly=1.44.0=r44h2b5f3a1_0
+  - r-patchwork=1.3.0=r44hc72bb7e_0
+  - r-pbkrtest=0.5.4=r44hc72bb7e_0
+  - r-pillar=1.10.2=r44hc72bb7e_0
+  - r-pkgbuild=1.4.8=r44hc72bb7e_0
+  - r-pkgconfig=2.0.3=r44hc72bb7e_4
+  - r-pkgdown=2.1.3=r44hc72bb7e_0
+  - r-pkgload=1.4.0=r44hc72bb7e_0
+  - r-plyr=1.8.9=r44ha18555a_1
+  - r-polynom=1.4_1=r44hc72bb7e_3
+  - r-praise=1.0.0=r44hc72bb7e_1008
+  - r-prettyunits=1.2.0=r44hc72bb7e_1
+  - r-proc=1.18.5=r44ha18555a_1
+  - r-processx=3.8.6=r44h2b5f3a1_0
+  - r-prodlim=2025.04.28=r44h93ab643_0
+  - r-profvis=0.4.0=r44h2b5f3a1_0
+  - r-progress=1.2.3=r44hc72bb7e_1
+  - r-progressr=0.15.1=r44hc72bb7e_0
+  - r-promises=1.3.2=r44h93ab643_0
+  - r-proxy=0.4_27=r44hb1dbf0f_3
+  - r-pryr=0.1.6=r44h0d4f4ea_2
+  - r-ps=1.9.1=r44h2b5f3a1_0
+  - r-purrr=1.0.4=r44h2b5f3a1_0
+  - r-quantreg=6.00=r44h012206f_0
+  - r-r6=2.6.1=r44hc72bb7e_0
+  - r-ragg=1.4.0=r44hdcc764c_0
+  - r-rappdirs=0.3.3=r44hb1dbf0f_3
+  - r-rbibutils=2.3=r44h2b5f3a1_0
+  - r-rcmdcheck=1.4.0=r44h785f33e_3
+  - r-rcolorbrewer=1.1_3=r44h785f33e_3
+  - r-rcpp=1.0.14=r44h93ab643_0
+  - r-rcpparmadillo=14.4.2_1=r44hc2d650c_0
+  - r-rcppeigen=0.3.4.0.2=r44hb79369c_0
+  - r-rdpack=2.6.4=r44hc72bb7e_0
+  - r-readr=2.1.5=r44h0d4f4ea_1
+  - r-recipes=1.3.1=r44hc72bb7e_0
+  - r-reformulas=0.4.1=r44hc72bb7e_0
+  - r-rematch2=2.1.2=r44hc72bb7e_4
+  - r-remotes=2.5.0=r44hc72bb7e_1
+  - r-reshape2=1.4.4=r44h0d4f4ea_4
+  - r-rlang=1.1.6=r44h93ab643_0
+  - r-rmarkdown=2.29=r44hc72bb7e_0
+  - r-roxygen2=7.3.2=r44h0d4f4ea_1
+  - r-rpart=4.1.24=r44h2b5f3a1_0
+  - r-rprojroot=2.0.4=r44hc72bb7e_1
+  - r-rstatix=0.7.2=r44hc72bb7e_2
+  - r-rstudioapi=0.17.1=r44hc72bb7e_0
+  - r-rversions=2.1.2=r44hc72bb7e_3
+  - r-sass=0.4.10=r44h93ab643_0
+  - r-scales=1.4.0=r44hc72bb7e_0
+  - r-sessioninfo=1.2.3=r44hc72bb7e_0
+  - r-shape=1.4.6.1=r44ha770c72_1
+  - r-shiny=1.10.0=r44h785f33e_0
+  - r-sna=2.8=r44h2b5f3a1_0
+  - r-sourcetools=0.1.7_1=r44ha18555a_2
+  - r-sparsem=1.84_2=r44hc4980d5_0
+  - r-sparsevctrs=0.3.4=r44h2b5f3a1_0
+  - r-squarem=2021.1=r44hc72bb7e_3
+  - r-statnet.common=4.11.0=r44h2b5f3a1_0
+  - r-stringi=1.8.7=r44h3c328a7_0
+  - r-stringr=1.5.1=r44h785f33e_1
+  - r-survival=3.8_3=r44h2b5f3a1_0
+  - r-sys=3.4.3=r44h2b5f3a1_0
+  - r-systemfonts=1.2.3=r44h5c043a3_0
+  - r-testthat=3.2.3=r44h93ab643_0
+  - r-textshaping=1.0.1=r44h16f7c1a_0
+  - r-tibble=3.2.1=r44hdb488b9_3
+  - r-tidyr=1.3.1=r44h0d4f4ea_1
+  - r-tidyselect=1.2.1=r44hc72bb7e_1
+  - r-tidytree=0.4.6=r44hc72bb7e_1
+  - r-timechange=0.3.0=r44ha18555a_1
+  - r-timedate=4041.110=r44hc72bb7e_0
+  - r-tinytex=0.57=r44hc72bb7e_0
+  - r-tzdb=0.5.0=r44h93ab643_0
+  - r-urlchecker=1.0.1=r44hc72bb7e_3
+  - r-usethis=3.1.0=r44hc72bb7e_0
+  - r-utf8=1.2.5=r44h2b5f3a1_0
+  - r-vctrs=0.6.5=r44h0d4f4ea_1
+  - r-viridislite=0.4.2=r44hc72bb7e_2
+  - r-vroom=1.6.5=r44h0d4f4ea_1
+  - r-waldo=0.6.1=r44hc72bb7e_0
+  - r-whisker=0.4.1=r44hc72bb7e_2
+  - r-withr=3.0.2=r44hc72bb7e_0
+  - r-xfun=0.52=r44h93ab643_0
+  - r-xml2=1.3.8=r44h1bb2df6_0
+  - r-xopen=1.0.1=r44hc72bb7e_1
+  - r-xtable=1.8_4=r44hc72bb7e_6
+  - r-yaml=2.3.10=r44hdb488b9_0
+  - r-yulab.utils=0.2.0=r44hc72bb7e_0
+  - r-zip=2.3.3=r44h2b5f3a1_0
+  - readline=8.2=h8c095d6_2
+  - rpsbproc=0.5.0=hd6d6fdc_3
+  - sed=4.9=h6688a6e_0
+  - setuptools=80.8.0=pyhff2d567_0
+  - sysroot_linux-64=2.17=h0157908_18
+  - tk=8.6.13=noxft_h4845f30_101
+  - tktable=2.10=h8bc8fbc_6
+  - toml=0.10.2=pyhd8ed1ab_1
+  - tomlkit=0.13.2=pyha770c72_1
+  - tzdata=2025b=h78e105d_0
+  - wget=1.21.4=hda4d442_0
+  - xmltodict=0.14.2=pyhd8ed1ab_1
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h4f16b4b_0
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
+  - xorg-libxt=1.3.1=hb9d3cd8_0
+  - yaml=0.2.5=h7f98852_2
+  - yq=3.4.3=pyhd8ed1ab_1
+  - zlib=1.3.1=hb9d3cd8_2
+  - zstd=1.5.7=hb8e6e7a_2
