--- a/pannagram.yml
+++ b/pannagram.yml
@@ -8,7 +8,7 @@ dependencies:
   - _openmp_mutex=4.5=2_gnu
   - _r-mutex=1.0.1=anacondar_1
   - argcomplete=3.6.2=pyhd8ed1ab_0
-  - binutils_impl_linux-64=2.43=h4bf12b8_4
+  - binutils_impl_linux-64=2.43=h4bf12b8_5
   - bioconductor-biocgenerics=0.52.0=r44hdfd78af_3
   - bioconductor-biostrings=2.74.0=r44h3df3fcb_1
   - bioconductor-data-packages=20250401=hdfd78af_0
@@ -30,9 +30,9 @@ dependencies:
   - bwidget=1.10.1=ha770c72_0
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - ca-certificates=2025.6.15=hbd8a1cb_0
   - cairo=1.18.4=h3394656_0
-  - curl=8.13.0=h332b0f4_0
+  - curl=8.14.1=h332b0f4_0
   - entrez-direct=22.4=he881be0_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
@@ -57,12 +57,12 @@ dependencies:
   - kernel-headers_linux-64=3.10.0=he073ed8_18
   - keyutils=1.6.1=h166bdaf_0
   - krb5=1.21.3=h659f571_0
-  - ld_impl_linux-64=2.43=h712a8e2_4
+  - ld_impl_linux-64=2.43=h712a8e2_5
   - lerc=4.0.0=h0aef613_1
   - libasprintf=0.24.1=h8e693c7_0
   - libblas=3.9.0=31_h59b9bed_openblas
   - libcblas=3.9.0=31_he106b2a_openblas
-  - libcurl=8.13.0=h332b0f4_0
+  - libcurl=8.14.1=h332b0f4_0
   - libdeflate=1.23=h86f0d12_0
   - libedit=3.1.20250104=pl5321h7949ede_0
   - libev=4.33=hd590300_2
@@ -84,13 +84,13 @@ dependencies:
   - libidn2=2.3.8=ha4ef2c3_0
   - libjpeg-turbo=3.1.0=hb9d3cd8_0
   - liblapack=3.9.0=31_h7ac8fdf_openblas
-  - liblzma=5.8.1=hb9d3cd8_1
-  - libmpdec=4.0.0=h4bc722e_0
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libmpdec=4.0.0=hb9d3cd8_0
   - libnghttp2=1.64.0=h161d5f1_0
   - libopenblas=0.3.29=pthreads_h94d23a6_0
   - libpng=1.6.47=h943b412_0
   - libsanitizer=15.1.0=h97b714f_2
-  - libsqlite=3.49.2=hee588c1_0
+  - libsqlite=3.50.1=hee588c1_0
   - libssh2=1.11.1=hcf80075_0
   - libstdcxx=15.1.0=h8f9b012_2
   - libstdcxx-devel_linux-64=15.1.0=h4c094af_102
@@ -109,9 +109,9 @@ dependencies:
   - ncbi-vdb=3.2.1=h9948957_0
   - ncurses=6.5=h2d0b736_3
   - nlopt=2.9.0=py313h438eccb_0
-  - numpy=2.2.6=py313h17eae1a_0
+  - numpy=2.3.0=py313h17eae1a_0
   - openssl=3.5.0=h7b32b05_1
-  - pandoc=3.7.0.1=ha770c72_0
+  - pandoc=3.7.0.2=ha770c72_0
   - pango=1.56.3=h9ac818e_1
   - parallel=20170422=pl5.22.0_0
   - pcre2=10.44=hc749103_2
@@ -136,14 +136,15 @@ dependencies:
   - perl-test-more=1.001002=pl5.22.0_0
   - perl-threaded=5.32.1=hdfd78af_1
   - pip=25.1.1=pyh145f28c_0
-  - pixman=0.46.0=h29eaf8c_0
+  - pixman=0.46.2=h29eaf8c_0
+  - plink=1.90b7.7=h18e278d_1
   - pthread-stubs=0.4=hb9d3cd8_1002
-  - python=3.13.3=hf636f53_101_cp313
+  - python=3.13.5=hf636f53_101_cp313
   - python_abi=3.13=7_cp313
   - pyyaml=6.0.2=py313h8060acc_2
   - r-abind=1.4_5=r44hc72bb7e_1006
   - r-ape=5.8_1=r44hb79369c_0
-  - r-aplot=0.2.5=r44hc72bb7e_0
+  - r-aplot=0.2.6=r44hc72bb7e_0
   - r-askpass=1.2.1=r44h2b5f3a1_0
   - r-assertthat=0.2.1=r44hc72bb7e_5
   - r-backports=1.5.0=r44hb1dbf0f_1
@@ -200,8 +201,8 @@ dependencies:
   - r-foreach=1.5.2=r44hc72bb7e_3
   - r-formula=1.2_5=r44hc72bb7e_2
   - r-fs=1.6.6=r44h93ab643_0
-  - r-future=1.49.0=r44h785f33e_0
-  - r-future.apply=1.11.3=r44hc72bb7e_0
+  - r-future=1.58.0=r44h785f33e_0
+  - r-future.apply=1.20.0=r44hc72bb7e_0
   - r-gbrd=0.4.12=r44hc72bb7e_1
   - r-generics=0.1.4=r44hc72bb7e_0
   - r-gert=2.1.4=r44h017ce79_0
@@ -273,7 +274,7 @@ dependencies:
   - r-numderiv=2016.8_1.1=r44hc72bb7e_6
   - r-openssl=2.3.3=r44he8289e2_0
   - r-optparse=1.7.5=r44hc72bb7e_1
-  - r-parallelly=1.44.0=r44h2b5f3a1_0
+  - r-parallelly=1.45.0=r44h2b5f3a1_0
   - r-patchwork=1.3.0=r44hc72bb7e_0
   - r-pbkrtest=0.5.4=r44hc72bb7e_0
   - r-pillar=1.10.2=r44hc72bb7e_0
@@ -331,7 +332,7 @@ dependencies:
   - r-sparsem=1.84_2=r44hc4980d5_0
   - r-sparsevctrs=0.3.4=r44h2b5f3a1_0
   - r-squarem=2021.1=r44hc72bb7e_3
-  - r-statnet.common=4.11.0=r44h2b5f3a1_0
+  - r-statnet.common=4.12.0=r44h2b5f3a1_0
   - r-stringi=1.8.7=r44h3c328a7_0
   - r-stringr=1.5.1=r44h785f33e_1
   - r-survival=3.8_3=r44h2b5f3a1_0
@@ -339,7 +340,7 @@ dependencies:
   - r-systemfonts=1.2.3=r44h5c043a3_0
   - r-testthat=3.2.3=r44h93ab643_0
   - r-textshaping=1.0.1=r44h16f7c1a_0
-  - r-tibble=3.2.1=r44hdb488b9_3
+  - r-tibble=3.3.0=r44h2b5f3a1_0
   - r-tidyr=1.3.1=r44h0d4f4ea_1
   - r-tidyselect=1.2.1=r44hc72bb7e_1
   - r-tidytree=0.4.6=r44hc72bb7e_1
@@ -349,7 +350,7 @@ dependencies:
   - r-tzdb=0.5.0=r44h93ab643_0
   - r-urlchecker=1.0.1=r44hc72bb7e_3
   - r-usethis=3.1.0=r44hc72bb7e_0
-  - r-utf8=1.2.5=r44h2b5f3a1_0
+  - r-utf8=1.2.6=r44h2b5f3a1_0
   - r-vctrs=0.6.5=r44h0d4f4ea_1
   - r-viridislite=0.4.2=r44hc72bb7e_2
   - r-vroom=1.6.5=r44h0d4f4ea_1
@@ -366,13 +367,14 @@ dependencies:
   - readline=8.2=h8c095d6_2
   - rpsbproc=0.5.0=hd6d6fdc_3
   - sed=4.9=h6688a6e_0
-  - setuptools=80.8.0=pyhff2d567_0
+  - setuptools=80.9.0=pyhff2d567_0
   - sysroot_linux-64=2.17=h0157908_18
-  - tk=8.6.13=noxft_h4845f30_101
+  - tk=8.6.13=noxft_hd72426e_102
   - tktable=2.10=h8bc8fbc_6
   - toml=0.10.2=pyhd8ed1ab_1
-  - tomlkit=0.13.2=pyha770c72_1
+  - tomlkit=0.13.3=pyha770c72_0
   - tzdata=2025b=h78e105d_0
+  - vcftools=0.1.14=pl5.22.0_1
   - wget=1.21.4=hda4d442_0
   - xmltodict=0.14.2=pyhd8ed1ab_1
   - xorg-libice=1.1.2=hb9d3cd8_0
@@ -384,6 +386,6 @@ dependencies:
   - xorg-libxrender=0.9.12=hb9d3cd8_0
   - xorg-libxt=1.3.1=hb9d3cd8_0
   - yaml=0.2.5=h7f98852_2
-  - yq=3.4.3=pyhd8ed1ab_1
+  - yq=3.4.3=pyhe01879c_2
   - zlib=1.3.1=hb9d3cd8_2
   - zstd=1.5.7=hb8e6e7a_2
